<resources>

    <!-- activities names -->
    <string name="app_name"><i>FlashCart</i></string>
    <string name="registration_name">Registration</string>
    <string name="welcome_name">Welcome</string>
    <string name="action_name">Action Selection</string>
    <string name="filters_name">Filters</string>
    <string name="newpurchase_name">New Purchase</string>
    <string name="lastpurchase_name">Your Last Purchase</string>
    <string name="product_info_name">Product Information</string>
    <string name="payment_name">Payment</string>

    <!-- views -->
    <string name="card_number">Card Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="join">or\n<u>Sign up now</u></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="add_product">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="ingredients">Ingredients</string>
    <string name="next">Skip</string>
    <string name="end_shopping">End Shopping</string>
    <string name="total">Total</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="unsubscribe">Click here to <u>Unsubscribe</u></string>
    <string name="pay">Pay</string>
    <string name="tot_price">Total price</string>
    <string name="tot_products">Total number of products</string>
    <string name="back">Back To Shopping</string>
    <string name="save_filter">Save Filters</string>
    <string name="new_filter">Write new Filter</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="user_details">User Details</string>
    <string name="product_image">Product Image</string>
    <string name="scan">Scan</string>
    <string name="logo">App Logo</string>

    <!-- dialogs -->
    <string name="title_logout_dialog">Confirm Logout</string>
    <string name="message_logout_dialog">Are you sure you want to log out?</string>
    <string name="title_delete_item_dialog">Confirm Deletion</string>
    <string name="message_delete_item_dialog">Are you sure you want to delete this item?</string>
    <string name="title_quantity_dialog">Select Quantity</string>
    <string name="title_add_product_dialog">Add Product</string>
    <string name="message_add_product_dialog">The product contains undesired ingredients, add anyway?</string>
    <string name="title_unsubscribe_dialog">Confirm Unsubscribtion</string>
    <string name="message_unsubscribe_dialog">Are you sure you want to unsubscribe?</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_removeall">Remove all</string>

    <!-- errors -->
    <string name="empty_field">Empty field!</string>
    <string name="empty_fields">Empty fields!</string>
    <string name="no_zero">If the code starts with \'0\', please remove it</string>
    <string name="empty_cart">Shopping cart is empty!</string>
    <string name="already_registered">Card already registered!</string>
    <string name="filter_existent">Filter already existent!</string>
    <string name="passmis">Password mismatch!</string>
    <string name="unsuccess">Data not valid!</string>
    <string name="noregcard">Card not registered!</string>
    <string name="enable_NFC">Please enable NFC!</string>
    <string name="enable_android_beam">Please enable Android Beam!</string>
    <string name="error_ticket_creation">Cannot create ticket file!</string>
    <string name="no_NFC">NFC is not available on this phone!</string>
    <string name="no_android_beam">Android Beam is not supported!</string>

    <!-- messages -->
    <string name="filters_saved">Filters have been saved</string>
    <string name="unsubscribe_success">Unsubscription successful!</string>
    <string name="prodnotfound">Sorry, the product has not been found</string>
    <string name="place_to_NFC">Please place the phone on the NFC reader to complete the payment</string>
    <string name="ticket_sent">Ticket successfully sent, please pay</string>

</resources>
