<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/reg_tv_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_et_name"
                android:layout_below="@+id/reg_tv_name"
                android:layout_alignParentStart="true"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:id="@+id/reg_tv_surname"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/reg_et_name"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_et_surname"
                android:layout_below="@+id/reg_tv_surname"
                android:layout_alignParentStart="true"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:id="@+id/reg_tv_card"
                android:layout_below="@+id/reg_et_surname"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reg_et_card"
                android:layout_below="@+id/reg_tv_card"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/reg_tv_pass"
                android:layout_below="@+id/reg_et_card"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/reg_et_pass"
                android:layout_below="@+id/reg_tv_pass"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:id="@+id/reg_tv_confpass"
                android:layout_below="@+id/reg_et_pass"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/reg_et_confpass"
                android:layout_below="@+id/reg_tv_confpass"
                android:layout_alignParentStart="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/reg_b_done"
                android:layout_below="@+id/reg_et_confpass"
                android:layout_centerHorizontal="true"
                android:onClick="onClickDone"
                android:backgroundTint="@color/accent_maps"
                android:textColor="@android:color/white"
                android:enabled="true"
                android:background="@color/accent_maps"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
