<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.maps.unipi.maps.ProductInformation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_name"
        android:id="@+id/prodinfo_tv_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prodinfo_et_name"
        android:layout_below="@+id/prodinfo_tv_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ingredients"
        android:id="@+id/prodinfo_tv_ingr"
        android:layout_below="@+id/prodinfo_et_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prodinfo_et_ingr"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:id="@+id/prodinfo_b_addprod"
        android:layout_below="@+id/prodinfo_et_ingr"
        android:layout_toEndOf="@+id/prodinfo_tv_ingr"
        android:layout_marginTop="67dp"
        android:onClick="onClickAddProduct" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/prodinfo_b_next"
        android:layout_below="@+id/prodinfo_b_addprod"
        android:layout_centerHorizontal="true"
        android:onClick="onClickNextScan" />
</RelativeLayout>
