<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductInformationAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/btn_lay"
        android:weightSum="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:id="@+id/prodinfo_b_addprod"
            android:onClick="onClickAddProduct"
            android:layout_weight="0.5"
            android:layout_gravity="bottom|right"
            android:textColor="@android:color/white"
            android:enabled="true"
            android:background="@color/accent_maps"
            style="?android:borderlessButtonStyle">
        </Button>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/prodinfo_b_next"
            android:onClick="onClickNextScan"
            android:layout_weight="0.5"
            android:textColor="@android:color/white"
            android:enabled="true"
            android:background="@color/accent_maps"
            android:layout_gravity="bottom|left"
            style="?android:borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:id="@+id/img_lay"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img_rel_lay"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/prodinfo_tv_name"
                android:paddingRight="6dp"
                android:paddingLeft="0dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/prodinfo_tv_price"
                android:layout_below="@+id/prodinfo_tv_name"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prodinfo_iv_img"
            android:background="@drawable/img_border"
            android:padding="2dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0.6"
            android:contentDescription="@string/product_image"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_lay"
        android:orientation="horizontal"
        android:id="@+id/ing_lay"
        android:weightSum="1"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/btn_lay"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_lay"
            android:layout_weight="0.7"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/quantity"
                android:id="@+id/prodinfo_tv_quantity"
                android:layout_alignParentLeft="true" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prodinfo_np_quantity"
                android:layout_below="@+id/prodinfo_tv_quantity"
                android:background="@drawable/number_picker_border"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ing_rel_lay"
            android:layout_weight="0.3"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ingredients"
                android:id="@+id/prodinfo_tv_ingr"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prodinfo_tv_listingr"
                android:layout_below="@+id/prodinfo_tv_ingr"
                android:layout_marginTop="15dp"
                android:maxLines="14"
                android:scrollbars="vertical"
                android:textAlignment="textStart"
                android:paddingLeft="40dp"
                android:paddingRight="1dp"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
